# Ginesta

./: README.md  model.pkl  pyproject.toml
notebooks/: analysis.ipynb  notebook_to_Test_functions.ipynb
src/ginesta/: __init__.py  model.pkl  model.py  predict.py
tests/: test_ginesta.py  tests.py
