[project]
name = "ginesta"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "manu2022", email = "mdelangeltena@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "river>=0.21.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ginesta"]
